--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-moment": "^4.0.0",
     "vuejs-datepicker": "^1.5.4"
   },
   "devDependencies": {
